--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,10 @@ body:after {
   color: white;
 }
 
+.resume {
+  justify-content: center;
+}
+
 
 .btn {
   font-size: 16px;
@@ -688,6 +692,8 @@ body:after {
   position: relative; }
 
 .service {
+  justify-content: center;
+  border-radius: 5px;
   padding: 30px;
   background: #fff;
   -webkit-box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.1);
